2006-05-20 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (bitpatternFromVal): fixed for 64-bit machines
	* src/pic16/ralloc.c (newReg): use correct name in hashtable,
	  (allocReg): add only new registers to dynAllocRegs,
	  (pic16_assignRegisters): do not reset dynrIdx, fixes bugs
	    #1489055, #1445850, and probably #1483693

2006-05-19 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/glue.c (pic16_emitConfigRegs, pic16_emitIDRegs): fixed
	bug in for-loop that didn't emit the last of CONFIG and ID registers

2006-05-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genCodePointerGet): inc dptr instead of loading acc
	  with offset
	* src/mcs51/peeph.def (186.x): updated and reenabled to fix bugs
	  1489016, 1434401 and 1490124
	* src/ds390/peeph.def (186.x, 227.x): updated and reenabled to fix bugs
	  1489016, 1434401 and 1490124

2006-05-17 Borut Razem <borut.razem AT siol.net>

	* support/Util/dbuf.c: fixed bug #1489008 fix dbuf_c_str(),
	  thanks Stas Sergeev

2006-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/P89c51RD2.h,
	* device/include/mcs51/P89LPC901.h,
	* device/include/mcs51/P89LPC922.h,
	* device/include/mcs51/P89LPC932.h: added, thanks Omar Espinosa

2006-05-14 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* device/lib/pic16/libsdcc/stack/{stack.S, Makefile.in}: add workaround
	to fix missing stack pragma in compiled binary object file,

2006-05-14 Bernhard Held <bernhard AT bernhardheld.de>

	* support/packihx/configure.in,
	* support/packihx/configure: removed warning, autoconf >= 2.5x can
	determine sizeof basic types even while cross compiling

2006-05-13 Bernhard Held <bernhard AT bernhardheld.de>

	* src/avr/gen.c (aopop),
	* src/ds390/gen.c (aopOp),
	* src/hc08/gen.c (aopOp),
	* src/mcs51/gen.c (aopop),
	* src/pic16/gen.c (pic16_aopOp),
	* src/pic/gen.c (aopOp),
	* src/z80/gen.c (aopop): fix for bug #1479882; use new, exclusive asmop